# ds-playground

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  devbox.json  mise.toml  project-words.txt  pyproject.toml  techstack.md  techstack.yml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  mergify.yml
docs/: conf.py  index.rst
gilbert-shannon-reeds/: pyproject.toml
heart_disease/: constants.py
heart_disease/data/: get_dataset.py
notebooks/: 1.0-initial-data-exploration.ipynb  1.1-data-exploration-matplotlib.ipynb  1.2-data-exploration-seaborn.ipynb  1.3-data-exploration-plotly.ipynb  skeleton.ipynb
projects/disease-risk-prediction/: .envrc  README.md  mise.toml  pyproject.toml
projects/disease-risk-prediction/disease_risk_prediction/: __init__.py  app.py  constants.py  data.py  preprocess.py  train.py
projects/disease-risk-prediction/notebooks/: 1-EDA.py  2-Train-Prep.py  3-Train.py
projects/ds-utils/: .envrc  pyproject.toml
projects/gilbert-shannon-reeds/: Gilbert-Shannon-Reeds.ipynb  Gilbert-Shannon-Reeds.py  pyproject.toml
projects/heart-disease/: 1.1-data-exploration-matplotlib.ipynb  1.2-data-exploration-seaborn.ipynb
scripts/: install-kernels
