[project]
name = "gilbert-shannon-reeds"
version = "0.0.1"
description = "Python implementation of the Gilbert-Shannon-Reeds model for shuffling playing cards."
authors = ["Francis T. O'Donovan <proinsias@users.noreply.github.com>"]
license = { text = "MIT License" }
repository = "https://github.com/proinsias/gilbert-shannon-reeds"
documentation = "https://github.com/proinsias/gilbert-shannon-reeds"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ds-utils",
    "toml>=0.10.2",
    "ipykernel>=6.16.1",
    "ipython>=8.5.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.6.1",
    "notebook>=6.5.1",  # CVE-2020-26215
    "numpy>=1.23.4",
    "scikit-learn>=1.1.2",
    "scipy>=1.9.3",
    "pyyaml>=6.0"
]

[dependency-groups]
dev = [
    "flake8>=5.0.4",
    "pycodestyle>=2.9.1",
    "pydocstyle>=6.1.1",
    "pyflakes>=2.5.0",
    "pylint>=2.15.4",
    "pytest>=7.1.3",
    "yamllint>=1.28.0",
    "safety>=2.3.1",
]

[tool.uv.sources]
ds-utils = { path = "../ds-utils", editable = true }
